
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.95

   * fixed major bug in GRD map reading code & added normalization option

   * fix potential crasher bug with stick_balls

   * SHFT-F# key support, for set_key, scenes, and views

   * cmd.extend now adds help for function (updated test case).

   * various changes here and there for Mac OS/MacPyMOL compatibility

   * extensive work on the metaphorics P5M file format/Fedora stuff

   * massive tinkering with sequence visualization ideas, but nothing
     to show for it yet : (

Changes up to 0.94

   * no_smooth flag to make it easier to combine cartoon and atomistic
     representations

   * fixed yet another ray-tracing alpha channel bug with mixed 
     transparent/opaque objects.

   * new setting overlay_lines, overlay becomes a boolean toggle

   * specular now acts as a binary veto over spec_reflect and
     specular_intensity holds the OpenGL spec. intensity

   * ray_trace_fog deprecated (subservient to depth_cue)

   * Mac OSX native port completed as "MacPyMOL" Incentive Product
      - support for additional file extensions
      - GUI remembers last open location
      - QuickTime movie export
      - Cut and Paste image export

   * fixed bug in SelectorCountStates

   * default roving_polar_cutoff increased to 3.31 in order to show 
     marginal/potential hydrogen bonds

   * adjusted Z origin movement strategy again, and fixed problem
     with undesirable apparent z-translation in orthoscopic mode

   * pdb_insertions_go_first setting for handling structures where
     inserted residues come before, not after, the numbered residue.
     