@@ -20,6 +20,7 @@ Z* -------------------------------------------------------------------
 #include"Base.h"
 #include "MyPNG.h"
 #include"MemoryDebug.h"
+#include "Setting.h"
 
 #ifdef _HAVE_LIBPNG
 #include<png.h>
@@ -104,7 +105,9 @@ int MyPNGWrite(char *file_name,unsigned char *p,unsigned int width,unsigned int 
    png_set_IHDR(png_ptr, info_ptr, width, height, bit_depth, PNG_COLOR_TYPE_RGB_ALPHA,
       PNG_INTERLACE_NONE, PNG_COMPRESSION_TYPE_BASE, PNG_FILTER_TYPE_BASE);
 
-   png_set_gamma(png_ptr, 2.4, 1.0);
+   png_set_gamma(png_ptr, SettingGet(cSetting_png_screen_gamma), 
+                 SettingGet(cSetting_png_file_gamma));
+
 
    /* Write the file header information.  REQUIRED */
    png_write_info(png_ptr, info_ptr);
