@@ -179,6 +179,9 @@ CHANGE LOG
 
 Changes up to 0.95
 
+   * added ray_blend_colors setting to provide a simple way of
+     reducing oversaturation
+
    * fixed major bug in GRD map reading code & added normalization option
 
    * fix potential crasher bug with stick_balls
